# ich-app

./: CLAUDE.md  Cargo.toml  docker-compose.dev.yaml  docker-compose.prod.yaml
apps/admin/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
apps/admin/src/: App.tsx  routeTree.gen.ts
apps/admin/src/components/: StatusBadge.tsx  ThemeProvider.tsx  app-sidebar.tsx  auth-provider.tsx  delete-role-dialog.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  role-form-sheet.tsx  table-pagenation.tsx
apps/admin/src/contexts/: auth-context.ts
apps/admin/src/lib/: api.ts  utils.ts
apps/admin/src/routes/: __root.tsx  login.tsx
apps/admin/src/routes/_protected/: dashboard.tsx  profile.tsx  roles.tsx  route.tsx
apps/api/: .gitignore  Cargo.toml
apps/api/src/: errors.rs  main.rs
apps/api/src/handlers/: auth_handler.rs  bin_handler.rs  bom_handler.rs  item_handler.rs  location_handler.rs  mod.rs  permission_handler.rs  role_handler.rs  user_handler.rs  vendor_handler.rs  zone_handler.rs
apps/api/src/middlewares/: auth.rs  authz.rs
apps/api/src/routes/: auth_route.rs  bin_route.rs  bom_route.rs  item_route.rs  location_route.rs  mod.rs  permission_route.rs  role_route.rs  user_route.rs  vendor_route.rs  zone_route.rs
apps/iops/: components.json  package.json  pnpm-lock.yaml  vite.config.ts
apps/iops/src/: App.css  App.tsx
apps/iops/src-tauri/: Cargo.toml  tauri.conf.json
apps/iops/src-tauri/icons/: icon.icns
apps/iops/src-tauri/src/: lib.rs
apps/iops/src/components/: AppLayout.tsx  AppSidebar.tsx
apps/iops/src/pages/: ForgotPasswordPage.tsx  LoginPage.tsx
apps/worker/: Cargo.toml
apps/worker/src/: config.rs  main.rs
apps/worker/src/email/: gmail.rs
data/: inventory_stocks.csv  item_lots.csv  items.csv  locations.csv  permissions.csv  role_permissions.csv  storage_bins.csv  users.csv  warehouse_zones.csv
doc/: data-postgresql.md
libs/application/: Cargo.toml
libs/application/src/: errors.rs  ports.rs
libs/application/src/dto/: auth_dto.rs  bin_dto.rs  bom_dto.rs  item_dto.rs  location_dto.rs  mod.rs  pagination.rs  permission_dto.rs  role_dto.rs  session_dto.rs  user_dto.rs  vendor_dto.rs  zone_dto.rs
libs/application/src/ports/: cache.rs  repositories.rs
libs/application/src/security/: password.rs  session_token.rs
libs/application/src/services/: account_service.rs  auth_service.rs  bin_service.rs  bom_service.rs  item_service.rs  location_service.rs  mod.rs  role_service.rs  user_service.rs  vendor_service.rs  zone_service.rs
libs/domain/: Cargo.toml
libs/domain/src/: cache.rs  errors.rs  repositories.rs
libs/domain/src/entities/: bin.rs  bom.rs  cached_session.rs  item.rs  location.rs  mod.rs  password_token.rs  role.rs  user.rs  vendor.rs  zone.rs
libs/infrastructure/: Cargo.toml
libs/infrastructure/src/: lib.rs
libs/infrastructure/src/cache/: redis_cache.rs
libs/infrastructure/src/database/: pool.rs
libs/infrastructure/src/messaging/: mod.rs  rabbit_publisher.rs
libs/infrastructure/src/repositories/: mod.rs  pg_bin_repository.rs  pg_bom_repository.rs  pg_item_repository.rs  pg_location_repository.rs  pg_password_token_repository.rs  pg_role_repository.rs  pg_user_repository.rs  pg_user_session_repository.rs  pg_vendor_repository.rs  pg_zone_repository.rs
libs/shared/: Cargo.toml
libs/shared/src/: config.rs
migrations/: 001_init.sql  002_trigger.sql  003_partition.sql  004_test.sql  005_seed.sql
