[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Các lib nội bộ
application = { path = "../../libs/application" }
domain = { path = "../../libs/domain" }
infrastructure = { path = "../../libs/infrastructure" }
shared = { path = "../../libs/shared" }

# Lib bên ngoài dùng từ workspace
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
validator.workspace = true
chrono.workspace = true
time.workspace = true
uuid.workspace = true