[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
serde.workspace = true
validator.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
argon2.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true